# smart-home

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  StandartCoding.md  docker-compose.yml  main.cpp
Core/: CMakeLists.txt  CMakePresets.json  Dockerfile  main.cpp
